--- a/styles/BringPokes.module.css
+++ b/styles/BringPokes.module.css
@@ -3,6 +3,8 @@
     display:flex;
     justify-content:center;
     align-items: center;
+    flex-direction: column;
+    overflow: scroll;
 }
 
 .pokeForm form {
@@ -24,6 +26,21 @@
     text-align: center;
     color: var(--blue);
     opacity: 0.6;
+}
+
+.pokeForm div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+}
+
+.pokemon{
+    width: 10rem;
+    height: 12rem;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
 }
 
 @media screen and (max-width:450px){
