--- a/styles/Container.module.css
+++ b/styles/Container.module.css
@@ -8,9 +8,10 @@
 }
 
 .imgContainer{
-    margin-top: 2rem;
+    margin-top: 1rem;
     display:flex;
     width: 100%;
+    height: 60%;
     justify-content: center;
 }
 
@@ -22,7 +23,7 @@
 }
 
 .imgContainer > a:hover{
-filter:brightness(70%)
+    filter:brightness(70%)
 }
 
 @media screen and (max-width:500px){
