--- a/styles/BringPokes.module.css
+++ b/styles/BringPokes.module.css
@@ -90,10 +90,28 @@
 @media screen and (max-width:450px){
 
     .pokeForm{
-        margin-top: 0.1rem;
+
         display:flex;
         justify-content:center;
         align-items: center;
     }
+
+    .pokeForm input {
+        height: 1.6rem;
+        width:90vw;
+        border: none;
+        border-radius: 6px 6px;
+        color: var(--blue);
+    }
     
+    .loadingContainer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .loadingContainer img {
+        height: 40%;
+    }
 }
