--- a/styles/Container.module.css
+++ b/styles/Container.module.css
@@ -8,10 +8,9 @@
 }
 
 .imgContainer{
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     display:flex;
-    width: 100%;
-    height: 60%;
+    width: auto;
     justify-content: center;
 }
 
@@ -27,8 +26,7 @@
 }
 
 @media screen and (max-width:500px){
-.imgContainer > img {
+.imgContainer img {
     height: 60%;
-    width: 40%;
 }      
 }
