--- a/styles/BringPokes.module.css
+++ b/styles/BringPokes.module.css
@@ -43,16 +43,17 @@
     align-items: center;
     justify-content:center;
     backdrop-filter: blur(5px);
-    background: linear-gradient(to top,rgba(0,0,0,0.01),rgba(0,0,0,0.20));
+    background: linear-gradient(to bottom,rgba(0,0,0,0.01),rgba(0,0,0,0.20));
     border-radius: 10px;
-    box-shadow: 0.1rem 0.1rem rgba(0,0,0,0.1);
+    box-shadow: 0.2rem 0.2rem rgba(0,0,0,0.04);
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     color:var(--blue-dark);
+    transition: opacity 0.3s;
 }
 
 .pokemon:hover{
-    background: linear-gradient(to bottom,rgba(0,0,0,0.01),rgba(0,0,0,0.20));
+    background: linear-gradient(to top,rgba(0,0,0,0.01),rgba(0,0,0,0.20));
 }
 
 .pokeForm button {
@@ -77,7 +78,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 5;
 }
 
 .loadingContainer img {
