--- a/styles/BringPokes.module.css
+++ b/styles/BringPokes.module.css
@@ -32,7 +32,7 @@
     margin-top: 0.8rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content:space-evenly;
 }
 
 .pokemon{
